# hyperlight

./: Cargo.toml  Justfile  rust-toolchain.toml
src/hyperlight_common/: clippy.toml
src/hyperlight_common/src/: layout.rs  lib.rs  outb.rs  version_note.rs  vmem.rs
src/hyperlight_common/src/arch/s390x/: layout.rs  vmem.rs
src/hyperlight_guest/src/: error.rs  exit.rs  layout.rs  prim_alloc.rs  types.rs
src/hyperlight_guest/src/arch/s390x/: exit.rs  layout.rs  prim_alloc.rs
src/hyperlight_guest/src/guest_handle/: io.rs
src/hyperlight_guest_bin/src/: error.rs  guest_logger.rs  lib.rs  paging.rs
src/hyperlight_guest_bin/src/arch/amd64/: init.rs
src/hyperlight_guest_bin/src/arch/s390x/: context.rs  exception.rs  machine.rs  mod.rs
src/hyperlight_guest_bin/src/guest_function/: call.rs  register.rs
src/hyperlight_guest_macro/src/: lib.rs
src/hyperlight_host/: Cargo.toml  build.rs
src/hyperlight_host/examples/map-file-cow-test/: main.rs
src/hyperlight_host/src/hypervisor/: mod.rs  regs.rs  surrogate_process.rs
src/hyperlight_host/src/hypervisor/hyperlight_vm/: mod.rs  s390x.rs  x86_64.rs
src/hyperlight_host/src/hypervisor/regs/s390x/: mod.rs
src/hyperlight_host/src/hypervisor/virtual_machine/: mod.rs  whp.rs
src/hyperlight_host/src/hypervisor/virtual_machine/kvm/: s390x.rs
src/hyperlight_host/src/mem/: elf.rs  exe.rs  layout.rs  memory_region.rs  mgr.rs  shared_mem.rs  shared_mem_tests.rs
src/hyperlight_host/src/sandbox/: file_mapping.rs  host_funcs.rs  initialized_multi_use.rs  snapshot.rs  uninitialized.rs  uninitialized_evolve.rs
src/hyperlight_host/tests/: integration_test.rs  s390x_smoke_guest.rs
src/hyperlight_testing/src/: lib.rs
src/tests/rust_guests/.cargo/: config.toml
src/tests/rust_guests/s390x_smoke/: Cargo.toml
src/tests/rust_guests/s390x_smoke/.cargo/: config.toml
src/tests/rust_guests/s390x_smoke/src/: main.rs
src/tests/rust_guests/simpleguest/: Cargo.toml
src/tests/rust_guests/simpleguest/src/: main.rs
