[workspace]
resolver = "2"
default-members = [
    "src/hyperlight_common",
    "src/hyperlight_host",
    "src/hyperlight_testing",
]
members = [
    "src/hyperlight_common",
    "src/hyperlight_guest",
    "src/hyperlight_host",
    "src/hyperlight_guest_capi",
    "src/hyperlight_guest_tracing",
    "src/hyperlight_testing",
    "fuzz",
    "src/hyperlight_guest_bin",
    "src/hyperlight_guest_macro",
    "src/hyperlight_component_util",
    "src/hyperlight_component_macro",
    "src/trace_dump",
]
# Guests have custom linker flags, so we need to exclude them from the workspace
exclude = [
    "src/tests/rust_guests/dummyguest",
    "src/tests/rust_guests/simpleguest",
    "src/tests/rust_guests/witguest",
]

[workspace.package]
version = "0.14.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
homepage = "https://github.com/hyperlight-dev/hyperlight"
repository = "https://github.com/hyperlight-dev/hyperlight"
readme = "README.md"

[workspace.dependencies]
hyperlight-common = { path = "src/hyperlight_common", version = "0.14.0", default-features = false }
hyperlight-host = { path = "src/hyperlight_host", version = "0.14.0", default-features = false }
hyperlight-guest = { path = "src/hyperlight_guest", version = "0.14.0", default-features = false }
hyperlight-guest-bin = { path = "src/hyperlight_guest_bin", version = "0.14.0", default-features = false }
hyperlight-guest-macro = { path = "src/hyperlight_guest_macro", version = "0.14.0", default-features = false }
hyperlight-testing = { path = "src/hyperlight_testing", default-features = false }
hyperlight-guest-tracing = { path = "src/hyperlight_guest_tracing", version = "0.14.0", default-features = false }
hyperlight-component-util = { path = "src/hyperlight_component_util", version = "0.14.0", default-features = false }
hyperlight-component-macro = { path = "src/hyperlight_component_macro", version = "0.14.0", default-features = false }

# Override crates.io with your kvm workspace fork (e.g. s390x). Cargo resolves both members from the same git tree.
# Pin with `rev = "…"` instead of `branch` for reproducible builds.
[patch.crates-io]
kvm-bindings = { git = "https://github.com/vishnubijukumar/kvm.git", branch = "s390x-support" }
kvm-ioctls = { git = "https://github.com/vishnubijukumar/kvm.git", branch = "s390x-support" }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

# this will generate symbols for release builds
# so is handy for debugging issues in release builds
# to use, run `cargo build --profile=release-with-debug`
[profile.release-with-debug]
inherits = "release"
debug = true
