[package]
name = "s390x-smoke-guest"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "s390x_smoke"
path = "src/main.rs"

[dependencies]
hyperlight-common = { path = "../../../hyperlight_common", default-features = false }
hyperlight-guest = { path = "../../../hyperlight_guest" }
hyperlight-guest-bin = { path = "../../../hyperlight_guest_bin", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
