[package]
name = "simpleguest"
version = "0.10.0"
edition = "2021"

[dependencies]
hyperlight-guest = { path = "../../../hyperlight_guest" }
hyperlight-guest-bin = { path = "../../../hyperlight_guest_bin" }
hyperlight-common = { path = "../../../hyperlight_common", default-features = false }
hyperlight-guest-tracing = { path = "../../../hyperlight_guest_tracing" }
log = {version = "0.4", default-features = false }
tracing = { version = "0.1.41", default-features = false, features = ["log", "attributes"] }

[features]
default = []
trace_guest = ["hyperlight-guest-bin/trace_guest", "hyperlight-guest/trace_guest", "hyperlight-guest-tracing/trace"]
mem_profile = ["hyperlight-common/mem_profile", "hyperlight-guest-bin/mem_profile"]

